<resources>
    <string name="content_authority">com.ryandg.movieman.app</string>
    <string name="app_name">MovieMan</string>
    <string name="hello_world">Hello World!</string>
    <string name="news">News</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="strings">Settings</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="new_movies">Newest movies</string>
    <string name="login_info">You have to be logged to use MovieMan</string>
    <string name="login">Login</string>
    <string name="hintLoginPassword">password</string>
    <string name="hintLoginName">Username</string>
    <string name="no_account_info">No account yet?</string>
    <string name="signup">Signup</string>
    <string name="logout">Logout</string>

    <string name="recent_movies">Recent Movies</string>
    <string name="search_movies">Search Movies</string>
    <string name="profile">Profile</string>

    <string-array name="drawer_menu_items">
        <item>@string/recent_movies</item>
        <item>@string/search_movies</item>
        <item>@string/profile</item>
    </string-array>
</resources>
