<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_login_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_info" />

    <EditText
        android:id="@+id/inputLoginName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_login_info"
        android:hint="@string/hintLoginName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLoginName"
        android:hint="@string/hintLoginPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputPassword"
        android:text="@string/login" />

    <TextView
        android:id="@+id/lbl_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:text="@string/no_account_info" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_create_account"
        android:text="@string/signup" />
</RelativeLayout>